fixed problem with scaling iframe youtube videos on smaller screens

--- a/src/components/Post/styles.scss
+++ b/src/components/Post/styles.scss
@@ -15,3 +15,7 @@
 .createdBy {
   margin-right: 0.3rem;
 }
+
+.post iframe {
+  max-width: 100%;
+}
